[package]
name = "triad-protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "triad_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
ahash = "=0.8.6"
anchor-spl = "0.28.0"
pyth-solana-receiver-sdk ="0.1.0"
bytemuck = { version = "1.4.0" }
