[package]
name = "triad-protocol"
version = "0.1.4"
edition = "2021"
description = "Triad protocol, trade solana projects"
license = "ISC"

[lib]
crate-type = ["cdylib", "lib"]
name = "triad_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
bytemuck = { version = "1.4.0" }
spl-token-metadata-interface = "0.3.3"
spl-type-length-value = "0.4.3"
